--- a/src/css/2-form.css
+++ b/src/css/2-form.css
@@ -25,6 +25,7 @@ label > input {
     border-radius: 4px;
     width: 360px;
     height: 40px;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -46,6 +47,7 @@ label > textarea {
     height: 80px;
     outline: transparent;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
